Add anti protection secret